// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen agentGroups config import-export] should do nothing when the agentGroups already exist: the agentGroups already exist and have not been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "= agentgroup => Environment/cfgObjectTest
Completed. 0 object(s) imported.
",
}
`;

exports[`[mutagen agentGroups config import-export] should import the agentGroups: the agentGroups have been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "+ agentgroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
